# clickqt_practical

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  demo.py  pylintrc  pyproject.toml
.github/workflows/: ci.yml
clickqt/: QCheckableCombobox.py  __init__.py  __main__.py  base_widget.py  checkableComboBox.py  checkbox.py  combobox.py  core.py  datetimeedit.py  multivaluewidget.py  numericfields.py  pathfield.py  postprocessing.py  textfield.py  tuplewidget.py
clickqt/core/: __main__.py  callbackvalidator.py  commandexecutor.py  control.py  core.py  error.py  focusoutvalidator.py  gui.py  output.py  postprocessing.py  typedict.py  utils.py
clickqt/widgets/: __init__.py  base_widget.py  basewidget.py  checkbox.py  combobox.py  confirmationwidget.py  customwidget.py  datetimeedit.py  filefield.py  filepathfield.py  messagebox.py  multivaluewidget.py  numericfields.py  nvaluewidget.py  optiongrouptitlewidget.py  passwordfield.py  pathfield.py  styles.py  textfield.py  tuplewidget.py
clickqt/widgets/core/: QCheckableCombobox.py  QPathDialog.py
doc/: api.rst  conf.py  core.rst  dev_api.rst  index.rst  technical_doc.rst  widgets.rst
example/: pyproject.toml
example/example/: __main__.py  afwizard.py
tests/: conftest.py  dummy_cli.py  test_callback.py  test_clickqt.py  test_clickqt_external.py  test_command_import.py  test_command_string.py  test_default.py  test_disable.py  test_envvar.py  test_execution.py  test_focusoutvalidation.py  test_gui.py  test_option_group_widget.py  test_types.py  test_widgetregistry.py  testutils.py
tests/widget/: checkbox.py  numericfields.py  test_checkbox.py  test_messagebox.py  test_textfield.py  textfield.py
